attached the clear script to the clear button

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,23 +57,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Parents\toolParent.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\color_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\color_button.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\load_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\load_button.cs" />
     <Compile Include="Assets\Scripts\meshGenerator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\Scripts\tutorialText.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
     <Compile Include="Assets\Scripts\substrateControl.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\swap_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\swap_button.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\Scripts\Tutorials\LV1\dropdownSelectCheck.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\clear_button.cs" />
     <Compile Include="Assets\Scripts\levelRequirementManager.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\fill_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\fill_button.cs" />
     <Compile Include="Assets\Scripts\Tutorials\LV1\cameraPanCheck.cs" />
     <Compile Include="Assets\Scripts\Checks\checkStructures\RectangleStructure.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\elipse_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\elipse_button.cs" />
     <Compile Include="Assets\Scripts\Parents\tutorialParent.cs" />
     <Compile Include="Assets\Scripts\tools\lineTool.cs" />
     <Compile Include="Assets\Scripts\meshMaterial.cs" />
@@ -99,16 +100,16 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
     <Compile Include="Assets\Scripts\tools\bucketTool.cs" />
     <Compile Include="Assets\Scripts\Tutorials\LV1\Level1Tutorial.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\rect_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\rect_button.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\Scripts\Tutorials\LV1\depositButtonCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessIonEtch.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\save_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\save_button.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\line_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\line_button.cs" />
     <Compile Include="Assets\Scripts\LayerStackHolder.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\Scripts\Checks\checkStructures\CheckStruct.cs" />
@@ -131,7 +132,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
     <Compile Include="Assets\Scripts\Checks\checkEPressed.cs" />
     <Compile Include="Assets\Scripts\MenuButtons\StartButton.cs" />
-    <Compile Include="Assets\Scripts\button behaviors\draw_button.cs" />
+    <Compile Include="Assets\Scripts\CanvasButtons\draw_button.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\Scripts\Parents\checkParent.cs" />
