--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+MicroManufacturing.sln
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Assembly-CSharp.csproj
+.vscode/settings.json
