--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Dialogue\TextParent.cs" />
     <Compile Include="Assets\Scripts\Parents\toolParent.cs" />
     <Compile Include="Assets\Scripts\CanvasButtons\color_button.cs" />
     <Compile Include="Assets\Scripts\Dialogue\DialogueCanvas.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Assets\Scripts\control.cs" />
     <Compile Include="Assets\Scripts\tools\rectangleTool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\FreeText.cs" />
     <Compile Include="Assets\Scripts\paint.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessEtch.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
