--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\CanvasButtons\load_button.cs" />
     <Compile Include="Assets\Scripts\meshGenerator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 1\checkLiftOff.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
     <Compile Include="Assets\Scripts\substrateControl.cs" />
@@ -97,7 +98,8 @@
     <Compile Include="Assets\Scripts\ButtonEvents.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Scripts\Checks\checkTwoRectangles.cs" />
-    <Compile Include="Assets\Scripts\Checks\Level 1\checkPhotoResistOnSlab.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 1\checkPhotoButtonPressed.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 1\checkDepositOnPhotoResist.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\Scripts\Checks\Level 1\checkDepositButtonPressed.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
