updated tutorial text, made clickme signs last longer and have smart self-deletion, improved photoresist animation interaction with text, added free-play level. Still bug with re-entering levels, need to fix

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessAluminumEtch.cs" />
     <Compile Include="Assets\Scripts\tools\brushTool.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\customs\textDeactivateSLiderButtons.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
